--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
             class="collapse navbar-collapse" id=bs-example-navbar-collapse-1>
             <ul class="nav navbar-nav navbar-right">
                 <!-- entries without drop-downs appear here -->
-                <li><a href=#>News</a></li>
+                <li><a href=/news>News</a></li>
                 <!-- entries with drop-downs appear here -->
                 <!-- conditional logic to control which topnav appears for the audience defined in the configuration file.-->
                 <li class=dropdown><a href=# class=dropdown-toggle data-toggle=dropdown>Helpful Resources<b class=caret></b></a>
