--- a/themes.html
+++ b/themes.html
@@ -339,7 +339,7 @@
 
                         <li class="plugin on">
                             <div class="plugin-screenshot">
-                                <img src="https://imgur.com/ME6KMNQ.gif" data-src="https://i.imgur.com/R8ge8p1.png" class="lazy plugin-screenshot-img" width="auto" height="auto">
+                                <img src="https://imgur.com/ME6KMNQ.gif" data-src="https://u.nya.is/fkbmkt.png" class="lazy plugin-screenshot-img" width="auto" height="auto">
                                 <a href="https://betterdocs.net/themes/quiet.html" class="plugin-preview-link"><i class="fa fa-eye"></i></a>
                             </div>
                             <a href="https://betterdocs.net/themes/quiet.html" class="plugin-name">Quiet</a>
