--- a/shop/themes.html
+++ b/shop/themes.html
@@ -43,8 +43,8 @@
   crossorigin="anonymous"></script>
     <script> 
     $(function(){
-      $("#import-header").load("import/header.html");
-	  $("#import-mobile-nav").load("import/mobile-nav.html");
+      $("#import-header").load("./import/header.html");
+	  $("#import-mobile-nav").load("./import/mobile-nav.html");
     });
     </script> 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js"></script>
