--- a/shop/themes.html
+++ b/shop/themes.html
@@ -370,7 +370,7 @@
 							</li>
 							<li style="list-style: none">
 								<br>
-								<p><a href="#" target="_blank">Purchase Now $80</a></p>
+								<p><a href="https://goo.gl/forms/muqe7bNYTYglob0W2" target="_blank">Purchase Now $80</a></p>
 							</li>
 							<div class="shop-stock">
   								<div style="text-decoration: underline;font-size: 20px;">5</div>
