--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         
         <!-- CSS IMPORT FOR FONT -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:400,500,700" type="text/css">
-        <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Josefin+Sans:400,600,700" type="text/css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,600,700" type="text/css">
         
         <!-- CSS IMPORT FOR MAIN STYLE AND COLOR SCHEME -->
 		<link rel="stylesheet" href="css/style.css" type="text/css">
