--- a/classic/plugins.html
+++ b/classic/plugins.html
@@ -42,8 +42,8 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js"></script>
         <script> 
     $(function(){
-      $("#import-header").load("https://betterdocs.net/import/header.html");
-	  $("#import-mobile-nav").load("https://betterdocs.net/import/mobile-nav.html");
+      $("#import-header").load("https://betterdocs.net/classic/import/header.html");
+	  $("#import-mobile-nav").load("https://betterdocs.net/classic/import/mobile-nav.html");
     });
     </script>
     </head>
