--- a/classic/shop/themes.html
+++ b/classic/shop/themes.html
@@ -40,8 +40,8 @@
 	</script>
 	<script>
 	   $(function(){
-	     $("#import-header").load("https://betterdocs.net/import/header.html");
-	     $("#import-mobile-nav").load("https://betterdocs.net/import/mobile-nav.html");
+	     $("#import-header").load("https://betterdocs.net/classic/import/header.html");
+	     $("#import-mobile-nav").load("https://betterdocs.net/classic/import/mobile-nav.html");
 	   });
 	</script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js">
