--- a/classic/themes/squared.html
+++ b/classic/themes/squared.html
@@ -45,8 +45,8 @@
   crossorigin="anonymous"></script>
     <script> 
     $(function(){
-      $("#import-header").load("https://betterdocs.net/import/header.html");
-	  $("#import-mobile-nav").load("https://betterdocs.net/import/mobile-nav.html");
+      $("#import-header").load("https://betterdocs.net/classic/import/header.html");
+	  $("#import-mobile-nav").load("https://betterdocs.net/classic/import/mobile-nav.html");
     });
     </script> 
 </head>
