--- a/plugins.html
+++ b/plugins.html
@@ -163,12 +163,15 @@
             <div class="wrapper">
                 <div class="inner">
                     <header id="plugin-list-header">
-                            <h1 id="plugin-list-title">Plugins</h1>
-                            <a href="https://goo.gl/forms/CsqMsLqpFXHHqEb13" target="_blank" class="add-pencil" title="Add Plugin"><i class="fa fa-plus"></i></a>
-                            <input type="search" id="plugin-search-input" placeholder="Search plugins...">
-                            <div id="plugin-list-count">68 items</div>
-                        </header>
-                        <ul id="plugin-list">
+			<h1 id="plugin-list-title">Plugins</h1>
+			    <div id="plugin-list-count" class="total-items">Total Plugins: 68</div>
+				<input type="search" id="plugin-search-input" placeholder="Search themes...">
+			</header>
+		   <header id="plugin-list-header">
+			<h1 id="plugin-list-title" class="bd-header"><span class="bd-title">Better</span>Discord</h1>
+				<div id="plugin-list-count">68 Plugins</div>
+			   	<hr>
+			</header>
 
                             <li class="plugin on">
                                 <a href="http://sh.st/6J8JN" class="plugin-name" target="_blank">Double Click Edit</a>
