--- a/plugins.html
+++ b/plugins.html
@@ -149,14 +149,14 @@
             <div class="inner">
                   <header id="plugin-list-header">
                 <h1 id="plugin-list-title">Plugins</h1>
-                <div id="plugin-list-count" class="total-items">Total Plugins: 67</div>
+                <div id="plugin-list-count" class="total-items">Total Plugins: 68</div>
                 <input type="search" id="plugin-search-input" placeholder="Search plugins...">
               </header>
                   <header id="plugin-list-header">
                 <h1 id="plugin-list-title" class="bd-header">
                       <div id="betterdiscord"> <span class="bd-title">Better</span>Discord <a class="article-anchor page" href="#betterdiscord" aria-hidden="true"></a></div>
                     </h1>
-                <div id="plugin-list-count">67 Plugins</div>
+                <div id="plugin-list-count">68 Plugins</div>
                 <hr>
               </header>
                   <ul id="plugin-list">
@@ -427,6 +427,14 @@
                 <li class="plugin on"> <a href="https://github.com/qwerasd205/saveChannels" class="plugin-name" target="_blank">saveChannels</a>
                       <p class="plugin-desc">saveChannels is a plugin for BetterDiscord that saves selected channels within guilds between discord sessions, so that you don't have to select the right channels every time you reload discord!</p>
                       <div class="plugin-tag-list"> <a href="#Qwerasd" class="plugin-tag">Qwerasd</a> <a href="#Save" class="plugin-tag">Save</a> <a href="#Session" class="plugin-tag">Session</a> </div>
+                    </li>
+                    <li class="plugin on"> <a href="https://github.com/digiAlchem/BD-betterNSFW" class="plugin-name" target="_blank">betterNSFW</a>
+                      <p class="plugin-desc">Changes the 'nsfw-' prefix on Discord channels into a small 18+ icon</p>
+                      <div class="plugin-tag-list"> 
+                      <a href="#digiAlchem" class="plugin-tag">digiAlchem</a> 
+                      <a href="#NSFW" class="plugin-tag">NSFW</a> 
+                      <a href="#18" class="plugin-tag">18</a> 
+                      </div>
                     </li>
               </ul>
                   <header id="plugin-list-header">
