--- a/plugins.html
+++ b/plugins.html
@@ -128,14 +128,14 @@
             <div class="inner">
                   <header id="plugin-list-header">
                 <h1 id="plugin-list-title">Plugins</h1>
-                <div id="plugin-list-count" class="total-items">Total Plugins: 68</div>
+                <div id="plugin-list-count" class="total-items">Total Plugins: 69</div>
                 <input type="search" id="plugin-search-input" placeholder="Search plugins...">
               </header>
                   <header id="plugin-list-header">
                 <h1 id="plugin-list-title" class="bd-header">
                       <div id="betterdiscord"> <span class="bd-title">Better</span>Discord <a class="article-anchor page" href="#betterdiscord" aria-hidden="true"></a></div>
                     </h1>
-                <div id="plugin-list-count">68 Plugins</div>
+                <div id="plugin-list-count">69 Plugins</div>
                 <hr>
               </header>
                   <ul id="plugin-list">
@@ -413,6 +413,14 @@
                       <a href="#digiAlchem" class="plugin-tag">digiAlchem</a> 
                       <a href="#NSFW" class="plugin-tag">NSFW</a> 
                       <a href="#18" class="plugin-tag">18</a> 
+                      </div>
+                    </li>
+                    <li class="plugin on"> <a href="https://github.com/Arashiryuu/crap/blob/master/killxd.plugin.js" class="plugin-name" target="_blank">killxd</a>
+                      <p class="plugin-desc">Replaces shitty xds.</p>
+                      <div class="plugin-tag-list"> 
+                      <a href="#Arashiryuu" class="plugin-tag">Arashiryuu</a> 
+                      <a href="#xd" class="plugin-tag">xd</a> 
+                      <a href="#Replace" class="plugin-tag">Replace</a> 
                       </div>
                     </li>
               </ul>
