--- a/betterdiscord/install.html
+++ b/betterdiscord/install.html
@@ -166,7 +166,9 @@
 <!-- owl carousel --> 
 <script type="text/javascript" src="../js/owl.carousel.js"></script> 
 <!-- jquery slimscroll (dependency of jquery full page) --> 
-<script type="text/javascript" src="../js/jquery.slimscroll.min.js"></script> 
+<script type="text/javascript" src="../js/jquery.slimscroll.min.js"></script>
+<!-- jquery full page --> 
+<script type="text/javascript" src="../js/jquery.fullPage.min.js"></script> 
 <!-- jquery wordrotator --> 
 <script type="text/javascript" src="../js/jquery.wordrotator.min.js"></script>
 <!-- push js --> 
