--- a/themes/discordreborn.html
+++ b/themes/discordreborn.html
@@ -156,10 +156,10 @@
             <div class="inner">
               <header class="release-header">
                 <h1 class="release-title" itemprop="name">Discord Reborn</h1>
-                <div class="release-btns"> <a href="https://github.com/0mniscient/Discord-Themes/blob/master/Themes/Discord%20Reborn%206.theme.css" target="_blank" class="btn-release">Download</a>
+                <div class="release-btns"> <a href="https://github.com/0mniscient/Discord-Themes/blob/master/Themes/Discord%20Reborn.theme.css" target="_blank" class="btn-release">Download</a>
                   <div class="btn-author">Omniscient</div>
                 </div>
-                <iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/darkdiscord.html?theme=https://raw.githubusercontent.com/0mniscient/Discord-Themes/master/Themes/Discord%20Reborn%206.theme.css"></iframe>
+                <iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/darkdiscord.html?theme=https://raw.githubusercontent.com/0mniscient/Discord-Themes/master/css/Discord%20Reborn.css"></iframe>
               </header>
               <div id="disqus_thread"></div>
               <script>
